finishing hero and about section

--- a/css/styles.css
+++ b/css/styles.css
@@ -3,30 +3,49 @@
 
 /* VARIABLES */
 :root {
-    --primary-color: #c04ae2;
-    --secondary-color: #111111;
-    --primary-font: 'Poppins', sans-serif;
-    --secondary-font: 'Overpass', sans-serif;
+  --primary-color: #c04ae2;
+  --secondary-color: #111111;
+  --primary-font: "Poppins", sans-serif;
+  --secondary-font: "Overpass", sans-serif;
 }
 
 /* RESET DEFAULT STYLES */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: var(--primary-font);
+  font-size: 16px;
+  line-height: 1.5;
+  overflow-x: hidden;
+  color: var(--secondary-color);
+}
+
+section {
+  /* position: relative; */
+  padding-top: 5rem !important;
+  padding-bottom: 5rem !important;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 img {
-    max-width: 100%;
+  max-width: 100%;
 }
 
 h1,
@@ -35,179 +54,252 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: var(--secondary-font);
-    margin-bottom: 1rem;
+  font-family: var(--secondary-font);
+  margin-bottom: 1rem;
 }
 
 /* UTILITY CLASSES */
 .container {
-    width: 100%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1rem;
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 1rem;
 }
 
 .text-center {
-    text-align: center;
+  text-align: center;
 }
 
 .text-uppercase {
-    text-transform: uppercase;
+  text-transform: uppercase;
 }
 
 .text-primary {
-    color: var(--primary-color);
+  color: var(--primary-color);
 }
 
 .flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .flex-row {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .flex-column {
-    flex-direction: column;
+  flex-direction: column;
 }
 
 .btn {
-    display: inline-block;
-    max-width: max-content;
-    padding: 0.5rem 1rem;
-    border-radius: 0.25rem;
-    font-size: 0.8rem;
-    font-weight: 500;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    transition: all 0.3s;
+  display: inline-block;
+  max-width: max-content;
+  padding: 0.5rem 1rem;
+  border-radius: 0.25rem;
+  font-size: 0.8rem;
+  font-weight: 500;
+  border: none;
+  cursor: pointer;
+  outline: none;
+  transition: all 0.3s;
 }
 
 .btn-primary {
-    background-color: var(--primary-color);
-    color: #fff;
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
 .btn-primary:hover {
-    background-color: #a03dd1;
+  background-color: #a03dd1;
 }
 
 .btn-secondary {
-
-    border: 1px solid var(--primary-color);
+  border: 1px solid var(--primary-color);
 }
 
 .btn-secondary:hover {
-    background-color: var(--primary-color);
-    color: #fff;
+  background-color: var(--primary-color);
+  color: #fff;
 }
 
 .section-subheading {
-    font-size: 1.2rem;
-    text-transform: uppercase;
-    color: var(--primary-color);
-    margin-bottom: 1rem;
+  font-size: 1.2rem;
+  text-transform: uppercase;
+  color: var(--primary-color);
+  margin-bottom: 1rem;
 }
 
 .section-heading {
-    font-size: 3rem;
-    max-width: 600px;
-    font-weight: 700;
-    line-height: 1.2;
-    margin-bottom: 2rem;
+  font-size: 3rem;
+  max-width: 600px;
+  font-weight: 700;
+  line-height: 1.2;
+  margin-bottom: 2rem;
 }
 
 .section-heading.left {
-    margin-right: auto;
+  margin-right: auto;
 }
 
 .section-heading.right {
-    margin-left: auto;
-}
-
-
-
-/* GLOBAL STYLES */
-
-html {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-}
-
-body {
-    font-family: var(--primary-font);
-    font-size: 16px;
-    line-height: 1.5;
-    overflow-x: hidden;
-    color: var(--secondary-color);
-}
-
-section {
-    position: relative;
-    padding-top: 5rem !important;
-    padding-bottom: 5rem !important;
-
+  margin-left: auto;
 }
 
 /* HEADER */
-
-
-/* ABOUT */
-
-
-/* SERVICES */
-
-
-/* Projects */
-
-
-/* TEAM */
-
-
-/* TESTIMONIALS */
-
-
-/* CONTACT */
-
-
-/* FOOTER */
-
-
-/* MEDIA QUERIES */
-@media screen and (max-width: 768px) {
-
-    /* GLOBAL */
-
-    
-    /* HEADER */
-
-
-    /* HERO */
-
-
-    /* ABOUT */
-
-
-    /* PROJECTS */
-
-
-    /* TEAM */
-
-
-    /* TESTIMONIALS */
-
-
-    /* CONTACT */
-
-
-    /* FOOTER */
-
-
+header {
+  padding: 1rem 0;
+  width: 100%;
+  position: absolute;
 }
 
+.header__logo img {
+  width: 100px;
+}
 
+.header__menu {
+  gap: 1rem;
+}
+
+.header__menu li a {
+  font-size: 0.8rem;
+  font-weight: 600;
+  transition: color 0.3s;
+  position: relative;
+}
+
+.header__menu li a::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 1.2rem;
+  height: 2px;
+  width: 0;
+  transition: all 0.3s ease-out;
+  background-color: var(--secondary-color);
+}
+.header__menu li:hover a::after {
+  width: 70%;
+}
+
+.header__menu li a:hover {
+  color: var(--primary-color);
+}
+
+header .right {
+  gap: 1rem;
+}
+
+.menu-btn {
+  display: none;
+  font-size: 1.2rem;
+  cursor: pointer;
+}
+
+/* Hero */
+
+.hero__content {
+  height: 100%;
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.hero__content h1 {
+  font-size: 4rem;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.hero__content p {
+  font-size: 1.2rem;
+  font-weight: 300;
+  margin-bottom: 2rem;
+}
+
+.hero__img {
+  width: 60%;
+}
+
+/* about */
+
+.features {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 2fr));
+  gap: 2rem;
+}
+
+.feature {
+  padding: 2rem;
+  border-radius: 8px;
+}
+
+.feature:nth-child(1) {
+  border: 2px solid #fe6786;
+}
+.feature:nth-child(1) .feature__icon {
+  color: #fe6786;
+}
+
+.feature:nth-child(2) {
+  border: 2px solid #5cd8a5;
+}
+
+.feature:nth-child(2) .feature__icon {
+  color: #5cd8a5;
+}
+
+.feature:nth-child(3) {
+  border: 2px solid #9e86fe;
+}
+
+.feature:nth-child(3) .feature__icon {
+  color: #9e86fe;
+}
+
+.feature__icon {
+  font-size: 2rem;
+  color: var();
+}
+
+.feature__title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.feature__text {
+  font-size: 0.9rem;
+}
+
+.about__details {
+  display: flex;
+  gap: 2rem;
+  margin-top: 2rem;
+}
+
+.about__details-content h1 {
+  font-size: 2rem;
+  font-weight: 700;
+  margin-bottom: 1rem;
+}
+
+.about__details-content p {
+  font-size: 0.9rem;
+  font-weight: 400;
+  margin-bottom: 1rem;
+}
+
+.about__details-content .btn {
+  margin-top: 1rem;
+}
+
+.about__details-img {
+  width: 50%;
+}
+
+@media screen and (max-width: 768px) {
+}
