--- a/css/styles.css
+++ b/css/styles.css
@@ -301,5 +301,106 @@ header .right {
   width: 50%;
 }
 
+/* services */
+#services .section-heading,
+#services .section-subheading {
+  text-align: right;
+}
+
+.services {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 2rem;
+}
+
+.service {
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 8px;
+  background-color: #fff;
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.service__icon img {
+  width: 50px;
+  margin-bottom: 1rem;
+}
+
+.service__title {
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 1rem;
+}
+
+.service__text {
+  font-size: 0.9rem;
+  margin-bottom: 1rem;
+  text-align: center;
+}
+
+.service .arrow-icon {
+  font-size: 1.2rem;
+  color: var(--primary-color);
+  margin-left: auto;
+  transition: transform 0.3s;
+}
+.service:hover .arrow-icon {
+  transform: translateX(5px);
+}
+
+/* projects */
+#projects {
+  background: url("../assets/img/projects-bg.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 100% 100%;
+  background-attachment: fixed;
+}
+
+.projects {
+  display: flex;
+  flex-direction: column;
+  gap: 5rem;
+  margin-top: 5rem;
+}
+
+.project {
+  display: flex;
+  gap: 10%;
+  align-items: center;
+}
+.project:nth-child(2) {
+  flex-direction: row-reverse;
+}
+
+.project__img {
+  width: 50%;
+  position: relative;
+}
+
+/* team  */
+
+.members {
+  display: flex;
+  gap: 3rem;
+}
+
+.member__img {
+  margin-bottom: 1rem;
+}
+
+.member__content h1 {
+  margin-bottom: 0.25;
+}
+
+.member__content p {
+  opacity: 0.4;
+  font-weight: 600;
+}
+
 @media screen and (max-width: 768px) {
 }
