--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ body {
 }
 
 section {
-  /* position: relative; */
+  position: relative;
   padding-top: 5rem !important;
   padding-bottom: 5rem !important;
 }
@@ -152,7 +152,19 @@ h6 {
 header {
   padding: 1rem 0;
   width: 100%;
+  height: max-content;
   position: absolute;
+  z-index: 999;
+}
+
+header.sticky {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #fff;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
 }
 
 .header__logo img {
@@ -402,5 +414,269 @@ header .right {
   font-weight: 600;
 }
 
+/* contact */
+
+.contact {
+  display: flex;
+  align-items: center;
+  gap: 5rem;
+}
+
+.contact__form {
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.contact__form input,
+.contact__form text {
+  padding: 1rem;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.contact__form textarea {
+  resize: none;
+  border: none;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+}
+
+.contact__details {
+  width: 50%;
+}
+
+.contact__details .text {
+  font-size: 0.9rem;
+  color: #2e2e2e;
+  margin-bottom: 2rem;
+}
+
+.contact__details .detail {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
+
+.detail__icon {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  color: #fff;
+  background-color: #fe6686;
+  font-size: 0.8rem;
+}
+
+.detail:nth-child(2) .detail__icon {
+  background: #54d6a1;
+}
+
+.detail:nth-child(3) .detail__icon {
+  background: #f39a3f;
+}
+
+.detail__content h3 {
+  margin: 0;
+  line-height: 2.5;
+}
+
+.detail__content p {
+  color: #747474;
+  font-size: 0.9rem;
+}
+
+/* footer */
+
+footer {
+  padding: 2rem 0;
+}
+
+.footer__content {
+  display: grid;
+  gap: 5rem;
+  grid-template-columns: 2fr 1fr 1fr 1fr;
+}
+
+.footer__logo {
+  width: 100px;
+  margin-bottom: 1rem;
+}
+
+.footer__text {
+  font-size: 0.9rem;
+  color: #747474;
+  margin-bottom: 1rem;
+}
+
+.footer__newsletter {
+  position: relative;
+}
+
+.footer__newsletter input {
+  width: 100%;
+  padding: 1rem;
+  border-radius: 8px;
+  border: none;
+  outline: none;
+  background-color: #fff;
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+.footer__newsletter .icon {
+  position: absolute;
+  right: 10px;
+  top: 50%;
+  transform: translateY(-50%);
+  opacity: 0.3;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  font-size: 0.8rem;
+  color: #747474;
+}
+
+.footer__bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 0.8rem;
+  margin-top: 3rem;
+}
+
+.footer__bottom-icons {
+  display: flex;
+  gap: 1rem;
+}
+
+.facebook {
+  color: #3b5998;
+}
+
+.telegram {
+  color: #00acee;
+}
+
+.instagram {
+  color: #e4405f;
+}
+
 @media screen and (max-width: 768px) {
+  .container {
+    padding: 0 1rem;
+  }
+
+  section {
+    padding-top: 2rem !important;
+    padding-bottom: 3rem !important;
+  }
+
+  .section-heading {
+    font-size: 2rem;
+  }
+
+  .header__menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: #fff;
+    transform: translateX(-100%);
+    transform: all 0.3s;
+  }
+
+  .header__menu.show {
+    transform: translateX(0);
+  }
+
+  .menu-btn {
+    display: block;
+    z-index: 99;
+  }
+
+  #hero {
+    flex-direction: column;
+    justify-content: center;
+    margin-top: 10rem;
+  }
+
+  .hero__content {
+    width: 100%;
+    text-align: center;
+  }
+
+  .hero__content h1 {
+    font-size: 2.5rem;
+  }
+
+  .hero__content .btn {
+    margin: 0 auto;
+  }
+
+  .hero__img {
+    width: 100%;
+  }
+
+  .features {
+    grid-template-columns: repeat(1f1);
+  }
+  .feature {
+    padding: 1rem;
+  }
+
+  .about__details {
+    flex-direction: column;
+  }
+  .about__details-content,
+  .about__details-img {
+    text-align: center;
+    width: 100%;
+  }
+
+  #services h5,
+  #services h2 {
+    text-align: center !important;
+  }
+
+  .project {
+    flex-direction: column !important;
+    gap: 2rem;
+  }
+
+  .project__img {
+    width: 100%;
+    max-width: 300px;
+  }
+
+  .members {
+    flex-direction: column;
+    text-align: center;
+    justify-content: center;
+  }
+  .member {
+    display: block;
+    margin: 0 auto;
+  }
+  .member__img {
+    max-width: 300px;
+    text-align: center;
+  }
+
+  .contact {
+    flex-direction: column;
+    width: 100%;
+  }
 }
